src/main/java/org/example/mirimilibe/global/error/ErrorCode.java
package org.example.mirimilibe.global.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

	HttpStatus getHttpStatus();

	String getCode();

	String getMessage();
}